[package]
name = "web-static-pack"
version = "0.2.0"
authors = ["Paweł Kubrak <peku33@gmail.com>"]
edition = "2018"
description = "Embed static resources (GUI, assets, images, styles, html) within executable. Serve with hyper or any server of your choice."
license = "MIT"
homepage = "https://github.com/peku33/web-static-pack"
repository = "https://github.com/peku33/web-static-pack"
documentation = "https://docs.rs/web-static-pack"
readme = "README.md"

[dependencies]
failure = "^0.1.6"
log = "^0.4.8"

# For hyper_loader 
http = { version = "^0.2.0", optional = true }
http-body = { version = "^0.3.1", optional = true }
hyper = { version = "^0.13.1", optional = true }

[dev-dependencies]
bytes = "^0.5.3"
clap = "^2.33.0"
itertools = "^0.8.2"
lazy_static = "^1.4.0"
libflate = "^0.1.27"
mime_guess = "^2.0.1"
sha3 = "^0.8.2"
simple_logger = "^1.3.0"
tokio = { version = "^0.2", features = ["full"] }
walkdir = "^2.2.9"


[features]
default = ["hyper_loader"]
hyper_loader = [
    "hyper",
    "http-body",
    "http",
]
