[package]
name = "web-static-pack-common"
version = "0.5.0-beta.2"
authors = ["Paweł Kubrak <peku33@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Common types for web-static-pack and web-static-pack-packer crates."
homepage = "https://github.com/peku33/web-static-pack"
repository = "https://github.com/peku33/web-static-pack"
readme = "README.md"
keywords = ["web", "http", "static", "resources", "hyper"]
categories = ["web-programming"]

[dependencies]
rkyv = { version = "0.7.44" } # features = ["copy", "copy_unsafe"]
