[package]
name = "web-static-pack-common"
version = "0.5.1"
authors = ["Paweł Kubrak <peku33@gmail.com>"]
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Common types for web-static-pack and web-static-pack-packer crates."
homepage = "https://github.com/peku33/web-static-pack"
repository = "https://github.com/peku33/web-static-pack"
readme = "README.md"
keywords = ["web", "http", "static", "resources", "hyper"]
categories = ["web-programming"]

[dependencies]
rkyv = { version = "0.8.9", default-features = false, features = [
    "std",
    "alloc",
    "little_endian",
    "aligned",
    "pointer_width_32",
] }
