[package]
name = "web-static-pack"
version = "0.4.4"
authors = ["Paweł Kubrak <peku33@gmail.com>"]
edition = "2021"
description = "Embed static resources (GUI, assets, images, styles, html) within executable. Serve with hyper or any server of your choice."
license = "MIT"
homepage = "https://github.com/peku33/web-static-pack"
repository = "https://github.com/peku33/web-static-pack"
documentation = "https://docs.rs/web-static-pack"
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"

# For hyper_loader 
http = { version = "0.2.9", optional = true }
http-body = { version = "0.4.5", optional = true }
hyper = { version = "0.14.27", features = ["full"], optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
simple_logger = "4.2.0"
tokio = { version = "1.33.0", features = ["full"] }

[features]
default = ["hyper_loader"]
hyper_loader = ["hyper", "http-body", "http"]
