[package]
name = "web-static-pack"
version = "0.5.0-beta.2"
authors = ["Paweł Kubrak <peku33@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Embed static resources (GUI, assets, images, styles, html) within executable. Serve with hyper or any server of your choice."
homepage = "https://github.com/peku33/web-static-pack"
repository = "https://github.com/peku33/web-static-pack"
readme = "README.md"
keywords = ["web", "http", "static", "resources", "hyper"]
categories = ["web-programming"]

[dependencies]
web-static-pack-common = { version = "0.5.0-beta.2", path = "../common" }

anyhow = "1.0.86"
http = "1.1.0"
http-body = "1.0.0"
rkyv = { version = "0.7.44" } # features = ["copy", "copy_unsafe"]

[dev-dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.4.0", features = ["full"] }
test-case = "3.3.1"
tokio = { version = "1.38.0", features = ["full"] }
