[package]
name = "web-static-pack-packer"
version = "0.1.6"
authors = ["Paweł Kubrak <peku33@gmail.com>"]
edition = "2021"
description = "Installable web-static-pack-packer tool for web-static-pack crate"
license = "MIT"
homepage = "https://github.com/peku33/web-static-pack"
repository = "https://github.com/peku33/web-static-pack"
documentation = "https://docs.rs/web-static-pack"
readme = "README.md"

[dependencies]
bytes = "1.5.0"
clap = "4.4.7"
anyhow = "1.0.75"
itertools = "0.11.0"
libflate = "2.0.0"
log = "0.4.20"
mime_guess = "2.0.4"
sha3 = "0.10.8"
simple_logger = "4.2.0"
walkdir = "2.4.0"
