[package]
name = "web-static-pack-packer"
version = "0.5.0-beta.2"
authors = ["Paweł Kubrak <peku33@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Installable web-static-pack-packer tool for web-static-pack crate"
homepage = "https://github.com/peku33/web-static-pack"
repository = "https://github.com/peku33/web-static-pack"
readme = "README.md"
keywords = ["web", "http", "static", "resources", "hyper"]
categories = ["web-programming"]

[dependencies]
web-static-pack-common = { version = "0.5.0-beta.2", path = "../common" }

anyhow = "1.0.86"
brotli = "6.0.0"
clap = { version = "4.5.8", features = ["derive"] }
flate2 = "1.0"
itertools = "0.13.0"
mime_guess = "2.0.5"
rkyv = { version = "0.7.44" }
sha3 = "0.10.8"
walkdir = "2.5.0"

[dev-dependencies]
test-case = "3.3.1"
