[package]
name = "web-static-pack-tests"
version = "0.5.0-beta.2"
authors = ["Paweł Kubrak <peku33@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Integration tests & data for web-static-pack crate."
homepage = "https://github.com/peku33/web-static-pack"
repository = "https://github.com/peku33/web-static-pack"
publish = false

[dependencies]
web-static-pack-common = { version = "0.5.0-beta.2", path = "../common" }
web-static-pack = { version = "0.5.0-beta.2", path = "../loader" }
web-static-pack-packer = { version = "0.5.0-beta.2", path = "../packer" }

anyhow = "1.0.86"
futures = "0.3.30"
http = "1.1.0"
hyper = { version = "1.4.0", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["full"] }
include_bytes_aligned = "0.1.3"
log = "0.4.22"
memmap2 = "0.9.4"
ouroboros = "0.18.4"
reqwest = { version = "0.12.5", features = ["gzip", "brotli"] }
simple_logger = "5.0.0"
test-case = "3.3.1"
tokio = { version = "1.38.0", features = ["full"] }
